# extras_require_demos

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci_linux.yml
demos/manual_subpackage/: __init__.py
demos/pkginfo_subpackage/: __init__.py
demos/requirements_txt_subpackage/: requirements.txt
demos/setup_cfg_subpackage/: __init__.py
doc-source/: conf.py  index.rst  license.rst  manual_demo.rst  pkginfo_demo.rst  requirements.txt  requirements_file_demo.rst  setup_cfg_demo.rst
extras_require_demos/manual_subpackage/: __init__.py
extras_require_demos/pkginfo_subpackage/: __init__.py
extras_require_demos/requirements_txt_subpackage/: __init__.py  requirements.txt
extras_require_demos/setup_cfg_subpackage/: __init__.py
